###### TWE 4.9-1 RELEASED ######
2013-05-29 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: error handler code change: IGNORE->KEEP_ACTIVITY_RUNNING
   
2013-05-27 Sasa Bojanic <sasaboy@together.at>
   # New way of signing with timestamping implemented (different servers possible for timestamping)
   
2013-05-17 Sasa Bojanic <sasaboy@together.at>
   # shark mode: renaming of "SharkString" -> "XPDLString"

2013-05-15 Sasa Bojanic <sasaboy@together.at>
   # shark mode: now supporting deadline handling via ext attributes
   # shark mode: code refactored regarding SMTP handling (event audit, error, limit, deadline)
   # new component to deliver to shark (for XPDL validation)
   
2013-03-18 Sasa Bojanic <sasaboy@together.at>
   # Now icons in the taskbar are grouped

2013-03-07 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Initial support for SMTPLimitHandler

2013-03-06 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Now supporting new way of defining SMTPEventAuditManager extended attributes 
   (different names for activity/process EAS + possiblity to define default SMTP attributes on process and package level 
    for the activity and on the package level for the process)
   # Shark mode: Initial support for SMTPErrorHandler
   
2013-02-26 Sasa Bojanic <sasaboy@together.at>
   # Check for completion->Autocomplete when read

2013-02-21 Sasa Bojanic <sasaboy@together.at>
   # Added more icons that can be used when setting Activity's cutom icon

2013-02-20 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Full support for SHARK STRING VARIABLES

2013-02-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved support for SHARK STRING VARIABLES

2013-02-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: initial support for SHARK STRING VARIABLES

2013-02-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: now validating if variables' InitialValue is referencing DynamicScript variable (it is forbidden)