@@ -146,7 +146,7 @@ PROPAGATEKey=Propagate
 KEEP_ACTIVITY_RUNNINGKey=Keep activity running
 TERMINATE_PROCESSKey=Terminate process
 TERMINATE_ACTIVITYKey=Terminate activity
-SMTP_ERROR_HANDLER_RETURN_CODEKey=Return code
+ERROR_HANDLER_RETURN_CODEKey=Return code
 
 DYNAMICSCRIPTKey = Dynamic script
 IS_MANDATORYKey = Is mandatory
