@@ -138,7 +138,7 @@
 #Missing translation -> KEEP_ACTIVITY_RUNNINGKey=Keep activity running
 #Missing translation -> TERMINATE_PROCESSKey=Terminate process
 #Missing translation -> TERMINATE_ACTIVITYKey=Terminate activity
-#Missing translation -> SMTP_ERROR_HANDLER_RETURN_CODEKey=Return code
+#Missing translation -> ERROR_HANDLER_RETURN_CODEKey=Return code
 
 #Missing translation -> DYNAMICSCRIPTKey = Dynamic script
 #Missing translation -> IS_MANDATORYKey = Is mandatory
