@@ -139,7 +139,7 @@ PROPAGATEKey=Propagiraj
 KEEP_ACTIVITY_RUNNINGKey=Nastavi sa izvr\u0161avanjem aktivnosti
 TERMINATE_PROCESSKey=Terminiraj proces
 TERMINATE_ACTIVITYKey=Terminiraj aktivnost
-SMTP_ERROR_HANDLER_RETURN_CODEKey=Povratni kod
+ERROR_HANDLER_RETURN_CODEKey=Povratni kod
 
 DYNAMICSCRIPTKey = Dinami\u010Dki skript
 IS_MANDATORYKey = Obavezno
