@@ -75,7 +75,7 @@ HideSubElements.XMLGroupPanel.Script = Version Grammar ScriptVersion ScriptGramm
 #HideSubElements.XMLGroupPanel.Lane = NodeGraphicsInfos
 #HideSubElements.XMLGroupPanel.Pool = NodeGraphicsInfos
 
-HideElements.XMLTablePanel.ExtendedAttributes.Name = JaWE_CONFIGURATION JaWE_TYPE EDITING_TOOL EDITING_TOOL_VERSION SHARK_STRING_VARIABLE. VariableToProcess_UPDATE VariableToProcess_VIEW SMTP_EVENT_AUDIT_MANAGER_MODE_PROCESS SMTP_EVENT_AUDIT_MANAGER_EXECUTION_MODE_PROCESS SMTP_EVENT_AUDIT_MANAGER_SUBJECT_PROCESS SMTP_EVENT_AUDIT_MANAGER_CONTENT_PROCESS SMTP_EVENT_AUDIT_MANAGER_ATTACHMENTS_PROCESS SMTP_EVENT_AUDIT_MANAGER_ATTACHMENT_NAMES_PROCESS SMTP_EVENT_AUDIT_MANAGER_DM_ATTACHMENTS_PROCESS SMTP_EVENT_AUDIT_MANAGER_MODE_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_EXECUTION_MODE_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_SUBJECT_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_CONTENT_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_ATTACHMENTS_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_ATTACHMENT_NAMES_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_DM_ATTACHMENTS_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_GROUP_EMAIL_ONLY_ACTIVITY SMTP_DEADLINE_HANDLER_MODE SMTP_DEADLINE_HANDLER_EXECUTION_MODE SMTP_DEADLINE_HANDLER_SUBJECT SMTP_DEADLINE_HANDLER_CONTENT SMTP_DEADLINE_HANDLER_ATTACHMENTS SMTP_DEADLINE_HANDLER_ATTACHMENT_NAMES SMTP_DEADLINE_HANDLER_DM_ATTACHMENTS SMTP_DEADLINE_HANDLER_GROUP_EMAIL_ONLY SMTP_DEADLINE_HANDLER_RECIPIENT_PARTICIPANT SMTP_LIMIT_HANDLER_MODE_PROCESS SMTP_LIMIT_HANDLER_EXECUTION_MODE_PROCESS SMTP_LIMIT_HANDLER_SUBJECT_PROCESS SMTP_LIMIT_HANDLER_CONTENT_PROCESS SMTP_LIMIT_HANDLER_ATTACHMENTS_PROCESS SMTP_LIMIT_HANDLER_RECIPIENT_PARTICIPANT_PROCESS SMTP_LIMIT_HANDLER_ATTACHMENT_NAMES_PROCESS SMTP_LIMIT_HANDLER_DM_ATTACHMENTS_PROCESS SMTP_LIMIT_HANDLER_MODE_ACTIVITY SMTP_LIMIT_HANDLER_EXECUTION_MODE_ACTIVITY SMTP_LIMIT_HANDLER_SUBJECT_ACTIVITY SMTP_LIMIT_HANDLER_CONTENT_ACTIVITY SMTP_LIMIT_HANDLER_ATTACHMENTS_ACTIVITY SMTP_LIMIT_HANDLER_ATTACHMENT_NAMES_ACTIVITY SMTP_LIMIT_HANDLER_DM_ATTACHMENTS_ACTIVITY SMTP_LIMIT_HANDLER_GROUP_EMAIL_ONLY_ACTIVITY SMTP_LIMIT_HANDLER_RECIPIENT_PARTICIPANT_ACTIVITY SMTP_ERROR_HANDLER_MODE SMTP_ERROR_HANDLER_EXECUTION_MODE SMTP_ERROR_HANDLER_SUBJECT SMTP_ERROR_HANDLER_CONTENT SMTP_ERROR_HANDLER_ATTACHMENTS SMTP_ERROR_HANDLER_ATTACHMENT_NAMES SMTP_ERROR_HANDLER_DM_ATTACHMENTS SMTP_ERROR_HANDLER_GROUP_EMAIL_ONLY SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT SMTP_ERROR_HANDLER_RETURN_CODE ToolAgentClass ToolAgentClassProxy AppName AppMode MAIL_TOOL_AGENT_SEND_EXECUTION_MODE ALLOW_UNDEFINED_VARIABLES USE_PROCESS_CONTEXT_ONLY CREATE_ASSIGNMENTS TRANSIENT DYNAMICSCRIPT DELETE_FINISHED XFORMS_FILE CHECK_FOR_FIRST_ACTIVITY CHECK_FOR_CONTINUATION CHECK_FOR_COMPLETION REDIRECT_AFTER_PROCESS_END DYNAMIC_VARIABLE_HANDLING CHOOSE_NEXT_PERFORMER MAX_ASSIGNMENTS WORKLOAD_FACTOR IS_MANDATORY MIN_LENGTH
+HideElements.XMLTablePanel.ExtendedAttributes.Name = JaWE_CONFIGURATION JaWE_TYPE EDITING_TOOL EDITING_TOOL_VERSION SHARK_STRING_VARIABLE. VariableToProcess_UPDATE VariableToProcess_VIEW SMTP_EVENT_AUDIT_MANAGER_MODE_PROCESS SMTP_EVENT_AUDIT_MANAGER_EXECUTION_MODE_PROCESS SMTP_EVENT_AUDIT_MANAGER_SUBJECT_PROCESS SMTP_EVENT_AUDIT_MANAGER_CONTENT_PROCESS SMTP_EVENT_AUDIT_MANAGER_ATTACHMENTS_PROCESS SMTP_EVENT_AUDIT_MANAGER_ATTACHMENT_NAMES_PROCESS SMTP_EVENT_AUDIT_MANAGER_DM_ATTACHMENTS_PROCESS SMTP_EVENT_AUDIT_MANAGER_MODE_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_EXECUTION_MODE_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_SUBJECT_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_CONTENT_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_ATTACHMENTS_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_ATTACHMENT_NAMES_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_DM_ATTACHMENTS_ACTIVITY SMTP_EVENT_AUDIT_MANAGER_GROUP_EMAIL_ONLY_ACTIVITY SMTP_DEADLINE_HANDLER_MODE SMTP_DEADLINE_HANDLER_EXECUTION_MODE SMTP_DEADLINE_HANDLER_SUBJECT SMTP_DEADLINE_HANDLER_CONTENT SMTP_DEADLINE_HANDLER_ATTACHMENTS SMTP_DEADLINE_HANDLER_ATTACHMENT_NAMES SMTP_DEADLINE_HANDLER_DM_ATTACHMENTS SMTP_DEADLINE_HANDLER_GROUP_EMAIL_ONLY SMTP_DEADLINE_HANDLER_RECIPIENT_PARTICIPANT SMTP_LIMIT_HANDLER_MODE_PROCESS SMTP_LIMIT_HANDLER_EXECUTION_MODE_PROCESS SMTP_LIMIT_HANDLER_SUBJECT_PROCESS SMTP_LIMIT_HANDLER_CONTENT_PROCESS SMTP_LIMIT_HANDLER_ATTACHMENTS_PROCESS SMTP_LIMIT_HANDLER_RECIPIENT_PARTICIPANT_PROCESS SMTP_LIMIT_HANDLER_ATTACHMENT_NAMES_PROCESS SMTP_LIMIT_HANDLER_DM_ATTACHMENTS_PROCESS SMTP_LIMIT_HANDLER_MODE_ACTIVITY SMTP_LIMIT_HANDLER_EXECUTION_MODE_ACTIVITY SMTP_LIMIT_HANDLER_SUBJECT_ACTIVITY SMTP_LIMIT_HANDLER_CONTENT_ACTIVITY SMTP_LIMIT_HANDLER_ATTACHMENTS_ACTIVITY SMTP_LIMIT_HANDLER_ATTACHMENT_NAMES_ACTIVITY SMTP_LIMIT_HANDLER_DM_ATTACHMENTS_ACTIVITY SMTP_LIMIT_HANDLER_GROUP_EMAIL_ONLY_ACTIVITY SMTP_LIMIT_HANDLER_RECIPIENT_PARTICIPANT_ACTIVITY SMTP_ERROR_HANDLER_MODE SMTP_ERROR_HANDLER_EXECUTION_MODE SMTP_ERROR_HANDLER_SUBJECT SMTP_ERROR_HANDLER_CONTENT SMTP_ERROR_HANDLER_ATTACHMENTS SMTP_ERROR_HANDLER_ATTACHMENT_NAMES SMTP_ERROR_HANDLER_DM_ATTACHMENTS SMTP_ERROR_HANDLER_GROUP_EMAIL_ONLY SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT ERROR_HANDLER_RETURN_CODE ToolAgentClass ToolAgentClassProxy AppName AppMode MAIL_TOOL_AGENT_SEND_EXECUTION_MODE ALLOW_UNDEFINED_VARIABLES USE_PROCESS_CONTEXT_ONLY CREATE_ASSIGNMENTS TRANSIENT DYNAMICSCRIPT DELETE_FINISHED XFORMS_FILE CHECK_FOR_FIRST_ACTIVITY CHECK_FOR_CONTINUATION CHECK_FOR_COMPLETION REDIRECT_AFTER_PROCESS_END DYNAMIC_VARIABLE_HANDLING CHOOSE_NEXT_PERFORMER MAX_ASSIGNMENTS WORKLOAD_FACTOR IS_MANDATORY MIN_LENGTH
 
 #ShowColumns.XMLTablePanel.Activities = Id Name Performer Type StartMode FinishMode Deadlines
 #ShowColumns.XMLTablePanel.ActivitySets = Id Activities Transitions
