@@ -568,7 +568,7 @@ public class SharkXPDLUtils extends XPDLUtils {
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_GROUP_EMAIL_ONLY)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_MODE)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_SUBJECT)
-                 || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_RETURN_CODE)
+                 || eaName.equals(SharkConstants.EA_ERROR_HANDLER_RETURN_CODE)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT)
                  || eaName.equals(SharkConstants.EA_SMTP_DEADLINE_HANDLER_ATTACHMENT_NAMES)
                  || eaName.equals(SharkConstants.EA_SMTP_DEADLINE_HANDLER_ATTACHMENTS)
@@ -668,7 +668,7 @@ public class SharkXPDLUtils extends XPDLUtils {
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_GROUP_EMAIL_ONLY)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_MODE)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_SUBJECT)
-                 || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_RETURN_CODE)
+                 || eaName.equals(SharkConstants.EA_ERROR_HANDLER_RETURN_CODE)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT)
                  || eaName.equals(SharkConstants.EA_SMTP_DEADLINE_HANDLER_ATTACHMENT_NAMES)
                  || eaName.equals(SharkConstants.EA_SMTP_DEADLINE_HANDLER_ATTACHMENTS)
@@ -757,7 +757,7 @@ public class SharkXPDLUtils extends XPDLUtils {
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_GROUP_EMAIL_ONLY)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_MODE)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_SUBJECT)
-                 || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_RETURN_CODE)
+                 || eaName.equals(SharkConstants.EA_ERROR_HANDLER_RETURN_CODE)
                  || eaName.equals(SharkConstants.EA_SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT)
                  || eaName.startsWith(SharkConstants.EA_SMTP_DEADLINE_HANDLER_ATTACHMENT_NAMES)
                  || eaName.startsWith(SharkConstants.EA_SMTP_DEADLINE_HANDLER_ATTACHMENTS)
