@@ -127,9 +127,9 @@ public class SharkConstants {
 
    public static final String EA_SMTP_ERROR_HANDLER_DM_ATTACHMENTS = "SMTP_ERROR_HANDLER_DM_ATTACHMENTS";
 
-   public static final String EA_SMTP_ERROR_HANDLER_RETURN_CODE = "SMTP_ERROR_HANDLER_RETURN_CODE";
-
    public static final String EA_SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT = "SMTP_ERROR_HANDLER_RECIPIENT_PARTICIPANT";
+
+   public static final String EA_ERROR_HANDLER_RETURN_CODE = "SMTP_HANDLER_RETURN_CODE";
 
    public static final String EA_SMTP_DEADLINE_HANDLER_EXECUTION_MODE = "SMTP_DEADLINE_HANDLER_EXECUTION_MODE";
 
